# ThinkPadBar

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  config.toml.example  effective_work.md  fan_test  fan_test.rs  mcp-init.sh  start-codex.sh  start-gemini.sh  start.sh
.superpowers/brainstorm/5652-1774198367/: .server-info
.superpowers/brainstorm/5754-1774198404/: .server-info
.superpowers/brainstorm/5925-1774198514/: .server-info  mega-layout.html
.superpowers/brainstorm/6252-1774198998/: .events  .server-info  mega-layout-v2.html
agent/: GEMINI.md
docs/: ROADMAP.md  TECH_DEBT.md
docs/superpowers/plans/: 2026-03-22-thinkpad-bar-core.md
docs/superpowers/specs/: 2026-03-22-thinkpad-bar-design.md
docs/validation/: perf-smoke.profile.example  runtime-metrics.md
scripts/: install-local.sh  perf-smoke.sh  runtime-metrics.sh  uninstall-local.sh
src/: app.rs  config.rs  main.rs  popup_coordinator.rs  update_coordinator.rs
src/modules/: audio.rs  battery.rs  bluetooth.rs  brightness.rs  capabilities.rs  clock.rs  fan.rs  keyboard.rs  mic.rs  mod.rs  power.rs  runtime.rs  system.rs  tray.rs  wifi.rs  workspaces.rs
src/services/: audio_visualizer.rs  capabilities.rs  coalescing.rs  connectivity.rs  controls.rs  icon_resolver.rs  idle_inhibitor.rs  media.rs  mod.rs  popup_anchor.rs  session.rs  system_info.rs  tray.rs  tray_menu.rs  tray_model.rs  tray_ui.rs  wayland_runtime.rs  wifi_flow.rs
src/services/compositor/: hyprland.rs  mod.rs  types.rs
src/ui/: adapters.rs  bar.rs  chrome.rs  mod.rs  popup_host.rs  theme.rs
(+26 files in other folders)
