[package]
name = "thinkpadbar"
version = "0.6.88"
edition = "2021"



[dependencies]
iced = { git = "https://github.com/MalpenZibo/iced", rev = "daccb115c0827bd67fb11bf767db15b2066ed9df", features = ["tokio", "multi-window", "wayland", "winit", "advanced", "image"] }
tokio = { version = "1.43", features = ["full"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "1.0"
serde_json = "1.0"
system-tray = "0.8.5"
zbus = "5.0"
dirs = "6.0"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wayland-client = "0.31.13"
wayland-protocols = { version = "0.32.11", features = ["client", "unstable"] }
pipewire = "0.9.2"
